# RC2-i2c-display-mux

./: .env  .gitignore  CLAUDE.md  console  current.md  frameworks.md
.claude/: settings.local.json
libraries/activity_led/: CMakeLists.txt  activity_led.cpp  activity_led.h
libraries/console_logger/: CMakeLists.txt  README.md  console_logger.cpp  console_logger.h
libraries/io_manager/: CMakeLists.txt  io_manager.cpp  io_manager.h  io_types.h
libraries/io_manager/drivers/: analog_mux_driver.cpp  analog_mux_driver.h  i2c_switch_driver.cpp  i2c_switch_driver.h
libraries/oled_sh1107_gfx/: CMakeLists.txt  README.md
libraries/oled_sh1107_gfx/examples/: basic_test.cpp
libraries/oled_sh1107_gfx/include/: Adafruit_GFX.h  Adafruit_SH1107.h  Adafruit_SH110X.h  SH1107_Config.h
libraries/oled_sh1107_gfx/src/: Adafruit_GFX.cpp  Adafruit_SH1107.cpp  Adafruit_SH110X.cpp
libraries/pot_scanner/: CMakeLists.txt  pot_scanner.cpp  pot_scanner.h
libraries/ssd1306_graphics/: CMakeLists.txt  fonts.c  japanese_char_map.c  japanese_char_map.h  oled_display_manager.c  oled_display_manager.h  ssd1306_graphics.c  ssd1306_graphics.h
libraries/ssd1306_graphics/fonts/: FONT_CONVERSION_PROCESS.md  misaki_8px_japanese.c  misaki_8px_japanese.h  misaki_8px_kana.c  pixelmplus_10px_japanese.c  pixelmplus_10px_japanese.h  pixelmplus_10px_kana.c  pixelmplus_12px_japanese.c  pixelmplus_12px_japanese.h  pixelmplus_12px_kana.c
libraries/ssd1306_graphics/scripts/: extract_font_bitmaps.sh  generate_char_mapping.py  generate_ssd1306_fonts.sh  rebuild_japanese_fonts.sh
pico-tools/docs/: usb-reset-workflow.md
pico-tools/templates/advanced-cpp/: CMakeLists.txt  README.md  display.cpp  display.h  main.cpp  sensor.cpp  sensor.h
pico-tools/templates/attach-part/: CMakeLists.txt  README.md  main.cpp
pico-tools/templates/basic-cpp/: CMakeLists.txt  README.md  main.cpp
pico-tools/templates/includes/: usb_reset.h
pico-tools/templates/multicore-cpp/: CMakeLists.txt  README.md  core1_tasks.cpp  core1_tasks.h  main.cpp  shared_data.cpp  shared_data.h
pico-tools/templates/pio-cpp/: CMakeLists.txt  main.cpp  quadrature_encoder.pio  uart_tx.pio  ws2812.pio
